--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,9 @@
     "@nestjs/config": "^4.0.0",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-socket.io": "^11.0.11",
     "@nestjs/typeorm": "^11.0.0",
+    "@nestjs/websockets": "^11.0.11",
     "class-validator": "^0.14.1",
     "pg": "^8.13.3",
     "reflect-metadata": "^0.2.2",
